fix: refatorized the videoController, fix: new documentatoin in swagger, fix: ffmpeg now funciona
