# docs/swagger.yaml
@@ -17,9 +17,15 @@ definitions:
         type: string
       id:
         type: string
-      path:
+      localPath:
         type: string
+      s3FilesPath:
+        items:
+          type: string
+        type: array
       title:
+        type: string
+      uniqueName:
         type: string
       video:
         type: string
@@ -32,45 +38,10 @@ info:
   title: Go Streaming Service API
   version: "1.0"
 paths:
-  /s3/upload:
-    post:
-      consumes:
-      - multipart/form-data
-      description: Upload a video file to an S3 bucket.
-      parameters:
-      - description: Video File
-        in: formData
-        name: video
-        required: true
-        type: file
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "400":
-          description: Bad Request
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "500":
-          description: Internal Server Error
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      summary: Upload a video to S3
-      tags:
-      - s3
   /streaming/:
     get:
       description: Upload a video file along with metadata (title and description)
-        and save it to the server.
+        and save it to the AWS bucket.
       produces:
       - application/json
       responses:
@@ -93,11 +64,12 @@ paths:
       summary: Save a video
       tags:
       - streaming
+  /streaming/upload:
     post:
       consumes:
       - multipart/form-data
       description: Upload a video file along with metadata (title and description)
-        and save it to the server.
+        and save to the AWS bucket.
       parameters:
       - description: Video Title
         in: formData
