# internal/models/video.go
@@ -1,9 +1,12 @@
 package models
 
 type Video struct {
-	Id          string
-	Video       string
-	Title       string
-	Description string
-	Path        string
+	Id          	string
+	Video       	string
+	Title       	string
+	Description 	string
+	LocalPath       string
+	UniqueName  	string
+	S3FilesPath  	[]string
+
 }
